Version 4.0.0

  * New option, --fat-type-file, triggers the generation of code
    corresponding to global elements into type files instead of schema
    files in the file-per-type mode. This option is primarily useful
    when trying to minimize the amount of object code that is linked
    to an executable by packaging compiled generated code into a static
    (archive) library.

C++/Tree

  * New option, --suppress-assignment, suppress the generation of copy
    assignment operators for complex types. If this option is specified,
    the copy assignment operators for such types are declared private
    and left unimplemented.

  * New option, --generate-dep, triggers the generation of the make
    dependency file (.d) for the generated C++ files. Other options
    controlling dependency generation are: --generate-dep-only,
    --dep-phony, --dep-target, --dep-suffix, and --dep-regex. For
    details, refer to the XSD compiler command line manual (man pages).

  * Binary representation now stores string-based enumerations as integer
    values corresponding to C++ enumerators instead of string literals.

  * Binary representation now pools polymorphic type-id strings in an
    implicit string pool. The string pool support can also be used to
    pool strings in other situations. For example, you can implement
    string insertion/extraction operators for your stream to pool all
    strings. This can be useful if your documents contain a large number
    of repetitive strings.

  * New option, --polymorphic-plate, allows the creation of multiple
    polymorphic map plates in the same application. For details, refer
    to the XSD compiler command line manual (man pages).

  * To get the DOM association in the copy of an object model tree one
    now needs to explicitly pass the keep_dom flag as the second argument
    to the copy constructor or clone() function.

Version 3.3.0

  * New option, --char-encoding, allows you to specify the character encoding